namespace/cat-app/cat-app.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cat-app
spec:
  ports:
  - name: cat-app-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cat-app
  type: ClusterIP
