namespace/cat-app/cat-app.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cat-app
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/group: Operations
    gethomepage.dev/icon: cat.png
    gethomepage.dev/name: Cat App
spec:
  rules:
    - host: cat-app.k3d.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cat-app
                port:
                  number: 80
